syntax = "proto3";

package helloworld;


service Greeter {
  // unary call
  rpc SayHello(HelloRequest) returns (HelloReply);
  // server streaming call
  rpc SayRepeatHello(RepeatHelloRequest) returns (stream HelloReply);
  rpc getPilot(PilotRequest) returns (PilotReply);
  rpc Planes(PlaneRequest) returns (stream PlaneReply);
}

message PilotRequest{
  string pilot_name = 1;
}

message PilotReply{
  string pilot_name = 1;
}

message PlaneRequest{
  string pilot = 1;
}

message PlaneReply{
  string name = 1;
  string model = 2;
}


message HelloRequest {
  string name = 1;
}

message RepeatHelloRequest {
  string name = 1;
  int32 count = 2;
}

message HelloReply {
  string message = 1;
}

